header-top & header-bot: Added 'About', 'Shop' and 'Contact' in place of previous header links. Header-bot and header-top are no longer stretched to the same width.

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ body {
 .header {
     display: flex;
     flex-direction: column;
-    gap: 4rem;
     padding: 0 7rem;
     background-color: #1F2937;
 }
@@ -19,7 +18,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: .5rem;
+    padding-top: 1rem;
 }
 
 .logo {
@@ -28,16 +27,11 @@ body {
     margin: 0;
 }
 
-/* First two a tags in header-top */
-.header-links a:first-child, .header-links a:first-child + a {
-    margin-right: 1rem;
-}
-
-
 .header-link {
     font-size: 18px;
     color: #E5E7EB;
     text-decoration: none;
+    padding: .5rem;
 }
 
 /* header-bot */
@@ -45,6 +39,7 @@ body {
     display: flex;
     gap: 1rem;
     padding-bottom: 6rem;
+    padding: 8rem 17rem;
     font-size: 16px;
     color: #E5E7EB;
 
